--- a/css/styles.css
+++ b/css/styles.css
@@ -67,6 +67,9 @@ input, select {
     padding:  0 26px 16px;
     border-bottom: 1px solid #ccc;
 }
+.todo-container header h1{
+    text-align: center;
+}
 
 /*ToDo Form*/
 #todo-form, #edit-form{
